--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,8 @@ a:hover { text-decoration: underline; color: #06c }
 body { min-height: 100%; margin: 0; background-color: #fff; font-size: 14px; font-family: "icomoon"; }
 /*总体样式*/        
 header { width: 100%; height: 50px; background-color: #303335; }
-#left_part { position: absolute; top: 50px; bottom: 0; width: 200px; overflow: auto; background-color: #222; }
-#right_part { position: absolute; top: 50px; right: 0; bottom: 0; left: 200px; overflow: hidden; background-color: #999; }
+#left_part { position: absolute; top: 51px; bottom: 0; width: 200px; overflow: auto; background-color: #222; border-radius:0 7px 7px 0;-webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); }
+#right_part { position: absolute; top: 51px; right: 0; bottom: 0; left: 201px; overflow: hidden; background-color: #999; border-radius: 7px 7px 7px 7px;-webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); }
 /*头部样式*/
 header #headerNav { float: left; width: 33%; height: 100%; /*border: 1px solid red;*/ padding: 0; color: #404040; font: 13px/20px 'Lucida Grande', Tahoma, Verdana, sans-serif; }
 header #headerTitle { float: left; width: 33%; height: 100%; text-align: center; }
