--- a/public/css/table_style.css
+++ b/public/css/table_style.css
@@ -13,7 +13,7 @@ table.dataTable {
   /*
    * Body styles
    */ 
-    font:"Microsoft Ya Hei";
+    font-family: "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", "FontAwesome", sans-serif;
   }
   table.dataTable thead th,
   table.dataTable tfoot th {
