--- a/public/css/content.css
+++ b/public/css/content.css
@@ -1,13 +1,18 @@
 input[type='radio']:checked + span { background: red; font-size: 20px; }
 input[type='radio']:checked + span:before { background: red; font-size: 20px; }
 html { width: 98%; margin: 0 auto; padding: 0; }
-body { background: #93a0b0; }
+body { background: #93a0b0; font: 13px/20px "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", "FontAwesome", sans-serif;}
 
-#wraper { width: 90%; margin: 0 auto; }
+#wraper { width: 95%; margin: 0 auto 50px auto; }
 .box { width: 100%; border-radius: 5px; margin: 20px 0; background-image: -webkit-linear-gradient(top, #fafafa, #e1e1e1); background-image: -moz-linear-gradient(top, #fafafa, #e1e1e1); background-image: -o-linear-gradient(top, #fafafa, #e1e1e1); background-image: linear-gradient(to bottom, #fafafa, #e1e1e1); -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); }
-.search_box { font-family: 'SimHei', Helvetica, Arial, sans-serif; font-size: 13px; color: #555860; height: 100px; overflow: hidden; background: none; }
-.chart_box { height: auto; background: #fafafa; padding: 10px 0 10px 0; }
-.table_box { height: auto; padding: 10px 0 10px 0; }
+.search_box { color: #555860; height: 100px; overflow: hidden; background: none; }
+.chart_box {}
+.table_box {}
+
+.box .chart_title {width: 100%; height: 40px; margin-bottom: 10px;}
+.box .chart_title span {display: inline-block; font-size: 25px; margin-left: 2em; line-height: 40px;}
+
+#container1 {width: }
 
 /*button*/
 .button { position: relative; display: inline-block; height: 36px; line-height: 35px; padding: 0 20px; font-size: 13px; color: white; text-align: center; text-decoration: none; text-shadow: 0 -1px rgba(0, 0, 0, 0.4); background-clip: padding-box; border: 1px solid; border-radius: 2px; cursor: pointer; -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.08), 0 1px 2px rgba(0, 0, 0, 0.25); box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.08), 0 1px 2px rgba(0, 0, 0, 0.25); }
@@ -21,21 +26,18 @@ body { background: #93a0b0; }
 .button-red:active { background: #d5452f; border-color: #992f1f #ae3623 #ae3623; }
 
 /*input*/
-.choosedata .input { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; color: #555860; height: 26px; width: 120px; /*width: 100%;*/
-padding: 0 12px 0 25px; /*background: white url("../img/search.png") 8px 6px no-repeat;*/
-border: 1px solid; border-color: #a8acbc #babdcc #c0c3d2; border-radius: 13px; -webkit-appearance: textfield; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; -webkit-box-shadow: inset 0 1px #e5e7ed, 0 1px #fcfcfc; box-shadow: inset 0 1px #e5e7ed, 0 1px #fcfcfc; }
+.choosedata .input { height: 26px; width: 120px; padding: 0 12px 0 15px; border: 1px solid; border-color: #a8acbc #babdcc #c0c3d2; border-radius: 5px; -webkit-appearance: textfield; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; -webkit-box-shadow: inset 0 1px #e5e7ed, 0 1px #fcfcfc; box-shadow: inset 0 1px #e5e7ed, 0 1px #fcfcfc; }
 .choosedata .input:focus { outline: 0; border-color: #66b1ee; -webkit-box-shadow: 0 0 2px rgba(85, 168, 236, 0.9); box-shadow: 0 0 2px rgba(85, 168, 236, 0.9); }
 
 /*dropdown*/
-.dropdown { display: inline-block; position: relative; overflow: hidden; height: 28px; width: 150px; background: #f2f2f2; border: 1px solid; border-color: white #f7f7f7 #f5f5f5; border-radius: 3px; background-image: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06)); background-image: -moz-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06)); background-image: -o-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06)); background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.06)); -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08); box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08); }
+.dropdown { display: inline-block; position: relative; overflow: hidden; height: 28px; width: 150px; background: #f2f2f2; border: 1px solid; border-color: white #f7f7f7 #f5f5f5; border-radius: 5px; background-image: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06)); background-image: -moz-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06)); background-image: -o-linear-gradient(top, transparent, rgba(0, 0, 0, 0.06)); background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.06)); -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08); box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08); }
 .dropdown:before, .dropdown:after { content: ''; position: absolute; z-index: 2; top: 9px; right: 10px; width: 0; height: 0; border: 4px dashed; border-color: #888 transparent; pointer-events: none; }
 .dropdown:before { border-bottom-style: solid; border-top: none; }
 .dropdown:after { margin-top: 7px; border-top-style: solid; border-bottom: none; }
-.dropdown-select { position: relative; width: 130%; margin: 0; padding: 6px 8px 6px 10px; height: 28px; line-height: 14px; font-size: 12px; color: #62717a; text-shadow: 0 1px white; /* Fallback for IE 8 */
-background: #f2f2f2; /* "transparent" doesn't work with Opera */
-background: rgba(0, 0, 0, 0) !important; border: 0; border-radius: 0; -webkit-appearance: none; }
+.dropdown-select { position: relative; width: 130%; margin: 0; padding: 6px 8px 6px 10px; height: 28px; line-height: 14px; color: #62717a; text-shadow: 0 1px white; background: #f2f2f2; background: rgba(0, 0, 0, 0) !important; border: 0; border-radius: 0; -webkit-appearance: none; }
 .dropdown-select:focus { z-index: 3; width: 100%; color: #394349; outline: 2px solid #49aff2; outline: 2px solid -webkit-focus-ring-color; outline-offset: -2px; }
 .dropdown-select > option { margin: 3px; padding: 6px 8px; text-shadow: none; background: #f2f2f2; border-radius: 3px; cursor: pointer; }
+
 
 /*search box*/
 .choosedata_wraper { width: 100%; height: 100%; border-radius: 7px 7px 7px 7px; background: #dee5f4; -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); }
