--- a/public/css/left_menu.css
+++ b/public/css/left_menu.css
@@ -1,7 +1,7 @@
 /*左侧菜单*/
 /*@import url(http://fonts.googleapis.com/css?family=Quicksand:300,400,700);*/
-body { margin: 0; padding: 0; font: 13px/20px 'VAG Rounded', 'Lucida Grande', Tahoma, Verdana, sans-serif; color: #404040; background: #26272c; }
-aside { width: 200px; height: 100%; background-color: #222; }
+body { margin: 0; padding: 0; font: 13px/20px "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", "FontAwesome", sans-serif; color: #404040; background: #26272c; }
+aside { width: 200px; height: 100%; background-color: #222;}
 *, *:before, *:after { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 #leftmenu_container { width: 100%; padding: 0; text-align: center; }
