--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 /*全局样式*/        
-body { min-height: 100%; margin: 0; padding: 0; background-color: #FFF8DC; font: 13px/20px 'VAG Rounded', 'Lucida Grande', Tahoma, Verdana, sans-serif;}
-/*总体样式*/        
+/*body { min-height: 100%; margin: 0; padding: 0; background-color: #FFF8DC; font: 13px/20px 'VAG Rounded', 'Lucida Grande', Tahoma, Verdana, sans-serif;}*/
+body { min-height: 100%; margin: 0; padding: 0; background-color: #FFF8DC; font: 13px/20px "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", "FontAwesome", sans-serif; }
+/*总体样式*/
 header { width: 100%; height: 50px; background-color: #303335; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -o-user-select: none; user-select: none;}
 #left_part { position: absolute; top: 50px; bottom: 0; width: 200px; overflow: auto;  }
 #right_part { position: absolute; top: 50px; right: 0; bottom: 0; left: 200px; overflow: hidden; background-color: #999; }
