--- a/public/css/content.css
+++ b/public/css/content.css
@@ -1,18 +1,20 @@
 input[type='radio']:checked + span { background: red; font-size: 20px; }
 input[type='radio']:checked + span:before { background: red; font-size: 20px; }
 html { width: 98%; margin: 0 auto; padding: 0; }
-body { background: #93a0b0; font: 13px/20px "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", "FontAwesome", sans-serif;}
+body { background: #fff; font: 13px/20px "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", "FontAwesome", sans-serif;}
 
 #wraper { width: 95%; margin: 0 auto 50px auto; }
-.box { width: 100%; border-radius: 5px; margin: 20px 0; background-image: -webkit-linear-gradient(top, #fafafa, #e1e1e1); background-image: -moz-linear-gradient(top, #fafafa, #e1e1e1); background-image: -o-linear-gradient(top, #fafafa, #e1e1e1); background-image: linear-gradient(to bottom, #fafafa, #e1e1e1); -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); }
+.nav_box {width: 100%; height: 30px; margin-bottom: 20px;}
+.box { width: 100%; border-radius: 5px; margin: 20px 0; background-color: #eff9fd; /*background-image: -webkit-linear-gradient(top, #fafafa, #e1e1e1); background-image: -moz-linear-gradient(top, #fafafa, #e1e1e1); background-image: -o-linear-gradient(top, #fafafa, #e1e1e1); background-image: linear-gradient(to bottom, #fafafa, #e1e1e1);*/ -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1); border: 1px solid #c0c0c8; }
 .search_box { color: #555860; height: 100px; overflow: hidden; background: none; }
 .chart_box {}
 .table_box {}
 
 .box .chart_title {width: 100%; height: 40px; margin-bottom: 10px;}
-.box .chart_title span {display: inline-block; font-size: 25px; margin-left: 2em; line-height: 40px;}
-
-#container1 {width: }
+.box .chart_title span {display: inline-block; font-size: 25px; margin-left: 2em; line-height: 40px; color: #09579a}
+.nav_box nav { width: auto; height: 30px; float: left; line-height: 30px; font-size: 18px; }
+.nav_box .refresh_button {display: block; text-decoration:none; float: left; margin-left: 30px; width: 30px; height: 30px; border-radius: 8px; background: url("../images/scan_icon.png") no-repeat;}
+.nav_box a:hover { background-color: #FFEBCD;}
 
 /*button*/
 .button { position: relative; display: inline-block; height: 36px; line-height: 35px; padding: 0 20px; font-size: 13px; color: white; text-align: center; text-decoration: none; text-shadow: 0 -1px rgba(0, 0, 0, 0.4); background-clip: padding-box; border: 1px solid; border-radius: 2px; cursor: pointer; -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.08), 0 1px 2px rgba(0, 0, 0, 0.25); box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.08), 0 1px 2px rgba(0, 0, 0, 0.25); }
