--- a/public/css/left_menu.css
+++ b/public/css/left_menu.css
@@ -1,7 +1,7 @@
 /*左侧菜单*/
 /*@import url(http://fonts.googleapis.com/css?family=Quicksand:300,400,700);*/
-body { margin: 0; padding: 0; font: 13px/20px "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", "FontAwesome", sans-serif; color: #404040; background: #26272c; }
-aside { width: 200px; height: 100%; background-color: #222;}
+body { margin: 0; padding: 0; color: #404040; background: #e7e9ef; font: 13px/20px "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", "FontAwesome", sans-serif;}
+aside { width: 200px; height: 100%; /*background-color: #222;*/}
 *, *:before, *:after { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 #leftmenu_container { width: 100%; padding: 0; text-align: center; }
@@ -13,34 +13,17 @@ aside { width: 200px; height: 100%; background-color: #222;}
 #leftmenu_container .pagination > .active, #leftmenu_container .pagination > li:active { color: yellow; text-shadow: 0 -1px black; background: #1c1c1c; background: rgba(255, 255, 255, 0.01); border-color: black rgba(0, 0, 0, 0.65) rgba(0, 0, 0, 0.6); -webkit-box-shadow: inset 0 1px rgba(0, 0, 0, 0.05), inset 0 2px 2px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.06); box-shadow: inset 0 1px rgba(0, 0, 0, 0.05), inset 0 2px 2px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.06); }
 /*菜单*/
 .none {display: none;}
-.accordion {position: relative; width: 100%; height: 100%;}
-/*斗地主*/
-.accordion_ddz { position: absolute; width: 100%; height: 100%; color: #fff; width: 100%; z-index: 10;}
-.accordion_ddz .section { width: 100%; }
-.accordion_ddz .section:last-of-type { border-bottom: 1px solid #363636; }
-.accordion_ddz .section input[type='radio'] { display: none; }
-.accordion_ddz .section label { display: table; border-top: 1px solid #363636; cursor: pointer; padding: 10px 20px; background: #222; width: 100%; -webkit-transition: background 0.3s ease-in-out; -moz-transition: background 0.3s ease-in-out; -ms-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -o-user-select: none; user-select: none; }
-.accordion_ddz .section label:hover { background: #363636; }
-.accordion_ddz .section a {text-decoration: none; color: inherit;}
-.accordion_ddz .section label span { display: table-cell; vertical-align: middle; }
-.accordion_ddz .section .content { padding: 0; height: 0; -webkit-transition: all 0.4s; -moz-transition: all 0.4s; -ms-transition: all 0.4s; transition: all 0.4s; opacity: 0; position: relative; overflow-y: hidden; }
-.accordion_ddz .section .content ul { width: 100%; padding: 0; margin: 0; list-style: none; }
-.accordion_ddz .section .content ul li { padding: 10px 0 10px 40px; margin: 0; }
-.accordion_ddz .section .content ul li:hover { cursor: pointer; background-clip: padding-box; background-color: red; }
-.accordion_ddz .section input[type='radio']:checked + label { background: #363636; border-left: 3px solid #21CCFC; } /*选择与被选中的radio元素之后紧邻的label元素*/
-.accordion_ddz .section input[type='radio']:checked ~ .content { height: auto; opacity: 1; z-index: 10; } /*前面有被选中的radio的content*/
-/*德州*/
-.accordion_dz { position: absolute; width: 100%; height: 100%; color: #fff; width: 100%;}
-.accordion_dz .section { width: 100%; }
-.accordion_dz .section:last-of-type { border-bottom: 1px solid #363636; }
-.accordion_dz .section input[type='radio'] { display: none; }
-.accordion_dz .section label { display: table; border-top: 1px solid #363636; cursor: pointer; padding: 10px 20px; background: #222; width: 100%; -webkit-transition: background 0.3s ease-in-out; -moz-transition: background 0.3s ease-in-out; -ms-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -o-user-select: none; user-select: none; }
-.accordion_dz .section label:hover { background: #363636; }
-.accordion_dz .section a {text-decoration: none; color: inherit;}
-.accordion_dz .section label span { display: table-cell; vertical-align: middle; }
-.accordion_dz .section .content { padding: 0; height: 0; -webkit-transition: all 0.4s; -moz-transition: all 0.4s; -ms-transition: all 0.4s; transition: all 0.4s; opacity: 0; position: relative; overflow-y: hidden; }
-.accordion_dz .section .content ul { width: 100%; padding: 0; margin: 0; list-style: none; }
-.accordion_dz .section .content ul li { padding: 10px 0 10px 40px; margin: 0; }
-.accordion_dz .section .content ul li:hover { cursor: pointer; background-clip: padding-box; background-color: red; }
-.accordion_dz .section input[type='radio']:checked + label { background: #363636; border-left: 3px solid #21CCFC; } /*选择与被选中的radio元素之后紧邻的label元素*/
-.accordion_dz .section input[type='radio']:checked ~ .content { height: auto; opacity: 1; z-index: 10; } /*前面有被选中的radio的content/
+.accordion {width: 100%; bottom: 0; color: black; width: 100%; z-index: 10;}
+.accordion .section { width: 100%; }
+.accordion .section:last-of-type { border-bottom: 1px solid green; }
+.accordion .section input[type='radio'] { display: none; }
+.accordion .section label { display: table; border-top: 1px solid green; cursor: pointer; padding: 10px 20px; background: #f2f3f8; width: 100%; -webkit-transition: background 0.3s ease-in-out; -moz-transition: background 0.3s ease-in-out; -ms-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -o-user-select: none; user-select: none; }
+.accordion .section label:hover { color: #5498e3; }
+.accordion .section a {text-decoration: none; color: inherit;}
+.accordion .section label span { display: table-cell; vertical-align: middle; }
+.accordion .section .content { padding: 0; height: 0; -webkit-transition: all 0.4s; -moz-transition: all 0.4s; -ms-transition: all 0.4s; transition: all 0.4s; opacity: 0; position: relative; overflow-y: hidden; }
+.accordion .section .content ul { width: 100%; padding: 0; margin: 0; list-style: none; }
+.accordion .section .content ul li { padding: 10px 0 10px 40px; margin: 0; }
+.accordion .section .content ul li:hover { cursor: pointer; background-clip: padding-box; color: #5498e3; }
+.accordion .section input[type='radio']:checked + label { background: #f2f3f8; border-left: 3px solid #21CCFC; color: #5498e3; } /*选择与被选中的radio元素之后紧邻的label元素*/
+.accordion .section input[type='radio']:checked ~ .content { height: auto; opacity: 1; z-index: 10; } /*前面有被选中的radio的content*/
