--- a/public/css/table_style.css
+++ b/public/css/table_style.css
@@ -20,9 +20,9 @@ table.dataTable {
     font-weight: bold;
     background-color: #fff;}
   table.dataTable thead th,
-  table.dataTable thead td {
+  table.dataTable thead td {/*表头底边框*/
     padding: 10px 18px;
-    border-bottom: 1px solid #111111; }
+    border-bottom: 1px solid #c0c0c8; }
     table.dataTable thead th:active,
     table.dataTable thead td:active {
       outline: none; }
@@ -52,8 +52,8 @@ table.dataTable {
     background-image: url("../images/sort_asc_disabled.png"); }
   table.dataTable thead .sorting_desc_disabled {
     background-image: url("../images/sort_desc_disabled.png"); }
-  table.dataTable tbody tr {
-    background-color: #e2eefa; }
+  table.dataTable tbody tr { /*偶数行颜色*/
+    background-color: #fbfcfe; }
     table.dataTable tbody tr.selected {
       background-color: #b0bed9; }
   table.dataTable tbody th,
@@ -74,8 +74,8 @@ table.dataTable {
   table.dataTable.cell-border tbody tr:first-child th,
   table.dataTable.cell-border tbody tr:first-child td {
     border-top: none; }
-  table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
-    background-color: #dce8f4; }
+  table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd { /*奇数行颜色*/
+    background-color: #eff9fd; }
     table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.odd.selected {
       background-color: #abb9d3; }
   table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
@@ -86,16 +86,16 @@ table.dataTable {
   table.dataTable.order-column tbody tr > .sorting_2,
   table.dataTable.order-column tbody tr > .sorting_3, table.dataTable.display tbody tr > .sorting_1,
   table.dataTable.display tbody tr > .sorting_2,
-  table.dataTable.display tbody tr > .sorting_3 {
-    background-color: #dde9f5; }
+  table.dataTable.display tbody tr > .sorting_3 { /*background-color: #e2eefa;*/
+    background-color:#dde9f5; }
   table.dataTable.order-column tbody tr.selected > .sorting_1,
   table.dataTable.order-column tbody tr.selected > .sorting_2,
   table.dataTable.order-column tbody tr.selected > .sorting_3, table.dataTable.display tbody tr.selected > .sorting_1,
   table.dataTable.display tbody tr.selected > .sorting_2,
   table.dataTable.display tbody tr.selected > .sorting_3 {
     background-color: #acbad4; }
-  table.dataTable.display tbody tr.odd > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd > .sorting_1 {
-    background-color: #d5e1ec; }
+  table.dataTable.display tbody tr.odd > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd > .sorting_1 { /*排序的奇数行*/
+    background-color: #e2eefa; }
   table.dataTable.display tbody tr.odd > .sorting_2, table.dataTable.order-column.stripe tbody tr.odd > .sorting_2 {
     background-color: #d7e2ee; }
   table.dataTable.display tbody tr.odd > .sorting_3, table.dataTable.order-column.stripe tbody tr.odd > .sorting_3 {
@@ -106,8 +106,8 @@ table.dataTable {
     background-color: #a7b5ce; }
   table.dataTable.display tbody tr.odd.selected > .sorting_3, table.dataTable.order-column.stripe tbody tr.odd.selected > .sorting_3 {
     background-color: #a9b6d0; }
-  table.dataTable.display tbody tr.even > .sorting_1, table.dataTable.order-column.stripe tbody tr.even > .sorting_1 {
-    background-color: #dde9f5; }
+  table.dataTable.display tbody tr.even > .sorting_1, table.dataTable.order-column.stripe tbody tr.even > .sorting_1 { /*排序的偶数行*/
+    background-color: #eff9fd; }
   table.dataTable.display tbody tr.even > .sorting_2, table.dataTable.order-column.stripe tbody tr.even > .sorting_2 {
     background-color: #dfebf7; }
   table.dataTable.display tbody tr.even > .sorting_3, table.dataTable.order-column.stripe tbody tr.even > .sorting_3 {
@@ -130,8 +130,8 @@ table.dataTable {
     background-color: #a2afc8; }
   table.dataTable.display tbody tr:hover.selected > .sorting_3, table.dataTable.order-column.hover tbody tr:hover.selected > .sorting_3 {
     background-color: #a4b2cb; }
-  table.dataTable.no-footer {
-    border-bottom: 1px solid #111111; }
+  table.dataTable.no-footer { /*表底边框*/
+    border-bottom: 1px solid #c0c0c8; }
   table.dataTable.nowrap th, table.dataTable.nowrap td {
     white-space: nowrap; }
   table.dataTable.compact thead th,
